--- a/docs/CV.Rmd
+++ b/docs/CV.Rmd
@@ -7,7 +7,14 @@ email: "elliot.gould@unimelb.edu.au"
 github: egouldo
 aboutme: "Elliot Gould is an Australian citizen and PhD candidate at the School of Ecosystem and Forest Sciences, and a Quantitative Research Assistant on the [repliCATS project](replicats.research.unimelb.edu.au/) at the School of History and Philosophical Studies, University of Melbourne. Their PhD investigates the transparency and reproducibility of ecological models in applied ecology and conservation decision-making. In their role as a Quantitative Research Assistant, Elliot has managed a small team of researchers to develop a data provisioning platform for the repliCATS project, and taken lead responsibility for data management, as well as contributing to research on metascience. They have an enthusiasm for teaching and skill-sharing, particularly with regard to building a strong community of practice in emerging open-science methodology and computational biology within ecology and conservation. Elliot's research seeks to use data science techniques to advance the open-science movement by improving transparency and reproducibility, focussing on ecology and conservation Science. Other research interests include decision-theory, Structured Decision Making, and plant ecology (especially grasslands of the Victorian Volcanic Plains)."
 date: "`r format(Sys.time(), '%B %Y')`"
-output: vitae::awesomecv
+output: 
+  vitae::awesomecv:
+    keep_tex: true
+    fig_crop: no
+always_allow_html: yes
+params:
+  work_dir:
+    value: x
 ---
 
 ```{r setup, include=FALSE}
