Update SORTEE membership years

--- a/docs/CV.Rmd
+++ b/docs/CV.Rmd
@@ -103,7 +103,7 @@ tibble::tribble(
 tibble::tribble(
   ~name, ~year, ~with, ~location, ~description,
   "Testing and Developing preregistration templates for ecology and conservation using a case study of environmental flows management in Victoria, Australia", "March 2020 - Present", "Department of Environment Land Water & Planning", "Consultancy", "This research consultancy contributes to Elliot's PhD. This work involved the design and delivery of a collaborative workshop with DELWP in order to develop preregistration templates and methodology relevant to ecological modelling, in particular within decision-making and applied contexts.",
-  "Secretary / Treasurer, www.sortee.org","September 2020 - 2022", "Society for Open, Reliable, and Transparent Ecology and Evolutionary Biology (SORTEE)", "Professional Membership", "SORTEE is a service organization which brings together researchers working to improve reliability and transparency through cultural and institutional changes in ecology, evolutionary biology, and related fields broadly defined. Anyone interested in improving research in these disciplines is welcome to join, regardless of experience. The society is international in scope, membership, and objectives. Elliot is a founding member and co-chair of the executive committee."
+  "Founding Member and Secretary / Treasurer, www.sortee.org","2020 - 2022, 2023", "Society for Open, Reliable, and Transparent Ecology and Evolutionary Biology (SORTEE)", "Professional Membership", "SORTEE is a service organization which brings together researchers working to improve reliability and transparency through cultural and institutional changes in ecology, evolutionary biology, and related fields broadly defined. Anyone interested in improving research in these disciplines is welcome to join, regardless of experience. The society is international in scope, membership, and objectives. Elliot is a founding member and co-chair of the executive committee."
 ) %>% detailed_entries(
   what = name,
   when = year,
@@ -118,9 +118,9 @@ tibble::tribble(
 ```{r pubs}
 tribble(~title, ~year, ~author, ~journal, ~doi,
         "Predicting reliability through structured expert elicitation with the repliCATS (Collaborative Assessments for Trustworthy Science) process", "2023","Hannah Fraser, Martin Bush, Bonnie C. Wintle, Fallon Mody, Eden T. Smith, Anca M. Hanea, Elliot Gould, Victoria Hemming, Daniel G. Hamilton, Libby Rumpff, David P. Wilkinson, Ross Pearson, Felix Singleton Thorn, Raquel Ashton, Aaron Willcox, Charles T. Gray, Andrew Head, Melissa Ross, Rebecca Groenewegen, Alexandru Marcoci, Ans Vercammen, Timothy H. Parker, Rink Hoekstra, Shinichi Nakagawa, David R. Mandel, Don van Ravenzwaaij, Marissa McBride, Richard O. Sinnott, Peter Vesk, Mark Burgman, Fiona Fidler", "PLOS ONE", "https://doi.org/10.1371/journal.pone.0274429",
-        "Method Reporting with Initials for Transparency (MeRIT) promotes more granularity and accountability for author contributions", "2023",  "Shinichi Nakagawa, Edward Ivimey-Cook, Matthew J. Grainger, Rose E. O’Dea, Samantha Burke, Szymon M. Drobniak, Elliot Gould, Erin L. Macartney, April Robin Martinig, Matthieu Paquet, Kyle Morrison, Joel L. Pick, Patrice Pottier, Lorenzo Ricolfi, David P. Wilkinson, Aaron Willcox, Coralie Williams, Laura A. B. Wilson, Saras M. Windecker, Yefeng Yang & Malgorzata Lagisz", "Nature Communications", "Forthcoming",
-        "Predicting and reasoning about replicability using structured groups", "2023 (accepted)",  "Bonnie C. Wintle, Fallon Mody, Eden T. Smith, Anca M. Hanea, David P. Wilkinson, Victoria Hemming, Martin Bush, Hannah Fraser, Felix Singleton-Thorn, Marissa F. McBride, Elliot Gould, AndrewHead, Dan Hamilton, Libby Rumpff, Rink Hoekstra, Fiona Fidler", "Royal Society Open Science", "https://osf.io/preprints/metaarxiv/vtpmb/",
-        "What state of the world are we in? Targeted monitoring to detect transitions in vegetation restoration projects", "2022", "Christopher Stuart Jones, Freya Mary Thomas, Damian Richard Michael, Hannah Fraser, Elliot Gould, Jim Begley, Jenny Wilson, Peter Anton Vesk, Libby Rumpff", "journal", "https://doi.org/10.1002/eap.2728",
+        "Method Reporting with Initials for Transparency (MeRIT) promotes more granularity and accountability for author contributions", "2023",  "Shinichi Nakagawa, Edward Ivimey-Cook, Matthew J. Grainger, Rose E. O’Dea, Samantha Burke, Szymon M. Drobniak, Elliot Gould, Erin L. Macartney, April Robin Martinig, Matthieu Paquet, Kyle Morrison, Joel L. Pick, Patrice Pottier, Lorenzo Ricolfi, David P. Wilkinson, Aaron Willcox, Coralie Williams, Laura A. B. Wilson, Saras M. Windecker, Yefeng Yang & Malgorzata Lagisz", "Nature Communications", "https://doi.org/10.1038/s41467-023-37039-1",
+        "Predicting and reasoning about replicability using structured groups", "2023",  "Bonnie C. Wintle, Fallon Mody, Eden T. Smith, Anca M. Hanea, David P. Wilkinson, Victoria Hemming, Martin Bush, Hannah Fraser, Felix Singleton-Thorn, Marissa F. McBride, Elliot Gould, AndrewHead, Dan Hamilton, Libby Rumpff, Rink Hoekstra, Fiona Fidler", "Royal Society Open Science", "https://osf.io/preprints/metaarxiv/vtpmb/",
+        "What state of the world are we in? Targeted monitoring to detect transitions in vegetation restoration projects", "2022", "Christopher Stuart Jones, Freya Mary Thomas, Damian Richard Michael, Hannah Fraser, Elliot Gould, Jim Begley, Jenny Wilson, Peter Anton Vesk, Libby Rumpff", "Ecological Applications", "https://doi.org/10.1002/eap.2728",
         "Mathematically aggregating experts’ predictions of possible futures", "2021",  "A. M. Hanea, D. P. Wilkinson, M. McBride, A. Lyon, D. van Ravenzwaaij, F. Singleton Thorn, C. Gray, D. R. Mandel, A. Willcox, E. Gould, E. T. Smith, F. Mody, M. Bush, F. Fidler, H. Fraser, B. C. Wintle", "PLOS ONE", "https://doi.org/10.1371/journal.pone.0256919",
         "Towards open, reliable, and transparent ecology and evolutionary biology", "2021",  "Rose E. O'Dea, Timothy H. Parker, Yung En Chee, Antica Culina, Szymon M. Drobniak, David H. Duncan, Fiona Fidler, Elliot Gould, Malika Ihle, Clint D. Kelly, Malgorzata Lagisz, Dominique G. Roche, Alfredo Sánchez-Tójar, David P. Wilkinson, Bonnie C. Wintle & Shinichi Nakagawa", "BMC Biology", "https://doi.org/10.1186/s12915-021-01006-3",
         "A practical guide for conservation planning using the General Ecosystem Model for Southern Australian Woodlands.", "2021", "Good, M., Fraser, H., Gould, E., Vesk, P., Rumpff, L.", "NESP Threatened Sprecies Recovery Hub Project 7.2, Brisbane", "https://www.nespthreatenedspecies.edu.au/media/yvlbs1tk/7-2-a-practical-guide-for-conservation-planning-using-the-general-ecosystem-model-for-southern-australian-woodlands_v3.pdf"
